Arrumar bug function call